tests/ui/async-await/future-contains-err-issue-115188.stderr
error[E0063]: missing field `t` in initializer of `Wrapper<_>`
  --> $DIR/future-contains-err-issue-115188.rs:7:13
   |
LL |     let y = Wrapper { };
   |             ^^^^^^^ missing `t`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0063`.
